<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_250"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/light_blue"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_movie_background"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/no_image" />


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar.Default"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_btn_left"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:title="" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/spacing_24">

            <TextView
                android:id="@+id/rating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating_label"
                android:textAppearance="@style/TextView.Title.Section"
                android:textStyle="bold" />

            <include
                android:id="@+id/layout_rating"
                layout="@layout/item_rating"/>

            <TextView
                android:id="@+id/genre_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:text="@string/genre_label"
                android:textAppearance="@style/TextView.Title.Section"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/genre_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false" />

            <TextView
                android:id="@+id/status_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:text="@string/status_label"
                android:textAppearance="@style/TextView.Title.Section"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_10"
                android:textSize="@dimen/font_16"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/summary_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:text="@string/summary_label"
                android:textAppearance="@style/TextView.Title.Section"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_10"
                android:textSize="@dimen/font_16"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/trailer_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_16"
                android:text="@string/trailer_label"
                android:textAppearance="@style/TextView.Title.Section"
                android:textStyle="bold" />

            <include layout="@layout/empty_item"
                android:id="@+id/layout_empty_trailer"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_video_trailer"/>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loading_trailer"
                app:shimmer_auto_start="true">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <include layout="@layout/loading_item_video_trailer"/>
                        <include layout="@layout/loading_item_video_trailer"/>
                        <include layout="@layout/loading_item_video_trailer"/>
                        <include layout="@layout/loading_item_video_trailer"/>
                        <include layout="@layout/loading_item_video_trailer"/>
                        <include layout="@layout/loading_item_video_trailer"/>
                        <include layout="@layout/loading_item_video_trailer"/>
                        <include layout="@layout/loading_item_video_trailer"/>
                    </LinearLayout>
                </ScrollView>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/review_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_16"
                android:text="@string/review_label"
                android:textAppearance="@style/TextView.Title.Section"
                android:textStyle="bold" />

            <include layout="@layout/empty_item"
                android:id="@+id/layout_empty_review"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_review"/>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loading_review"
                app:shimmer_auto_start="true">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <include layout="@layout/loading_item_review"/>
                        <include layout="@layout/loading_item_review"/>
                        <include layout="@layout/loading_item_review"/>
                        <include layout="@layout/loading_item_review"/>
                        <include layout="@layout/loading_item_review"/>
                        <include layout="@layout/loading_item_review"/>
                        <include layout="@layout/loading_item_review"/>
                        <include layout="@layout/loading_item_review"/>
                    </LinearLayout>
                </ScrollView>
            </com.facebook.shimmer.ShimmerFrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/light_blue"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>